Addig video and audio Tag

--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
 </head>
 
 <body>
-
+    <!--Tag video provide us a posibility to add some video to our's website, attributes like controls provide to us possybility to add some controll butons like play/pause or even sound controls, attributes "autoplay" provides us possibility to autorun video on website when that one is loaded (do not work on mobile phones)-->
+    <video width="400" height="400" controls autoplay>
+        <source type="video/ogg" src="http://techslides.com/demos/sample-videos/small.ogv">
+    </video>
+    <!--Tag audio work the same way as video, also heve attributes like controls or autoplay-->
+    <audio controls> 
+        <source  src="https://file-examples-com.github.io/uploads/2017/11/file_example_MP3_700KB.mp3"> 
+    </audio>
 </body>
 
 </html>
