Few changes in poisoned

--- a/poisoned_web.html
+++ b/poisoned_web.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <title>Poisoned Web Developer</title>
     <link href="https://fonts.googleapis.com/css2?family=Frijole&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
-    <div class="container">
         <header>
             <h1><img src="/icon/poison-bottle.png" width="50px" class="poison_bottle">Hubert <cite>"Poisoned"</cite>
                 Truty
@@ -22,126 +22,9 @@
             <a class="nav_bar">Współpraca</a>
             <a class="nav_bar">Kontakt</a>
         </nav>
-        <div class="o_mnie">
-
-            <p class="o_mnie_text">
-            <h3 class="o_mnie_h3">bla bla bla</h3>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat porta malesuada. Nullam quis lorem
-            gravida, cursus ligula eu, accumsan turpis. Cras accumsan elementum sodales. Sed ultricies urna in nisi
-            tristique dictum. Sed ex enim, ullamcorper a dolor sed, rhoncus mollis elit. Pellentesque sem leo,
-            varius a dapibus id, sodales id leo. Donec mollis sem orci, ac viverra massa fringilla vitae.
-            <h3>bla bla bla</h3>
-            Praesent vel tellus velit. Nullam ultricies sem ut aliquam condimentum. Morbi nec porttitor tellus, eu
-            tristique tellus. Phasellus mollis pellentesque est nec facilisis. Curabitur auctor varius enim. Nam non
-            libero in nisl euismod lobortis ac non nisl. Donec ut mauris eu elit hendrerit vehicula sed vel tellus.
-            Fusce arcu dolor, dapibus id nunc ut, interdum tempus metus. Interdum et malesuada fames ac ante ipsum
-            primis in faucibus.
-            <h3>bla bla bla</h3>
-            
-            Cras at mauris neque. Cras sagittis volutpat sollicitudin. Duis varius sem vitae ex semper dictum.
-            Integer auctor turpis sit amet tellus gravida dictum. Suspendisse molestie lacinia pharetra. Vivamus
-            accumsan vel est eu pellentesque. Vestibulum pretium dolor nec iaculis porttitor. Proin vehicula, elit
-            ac posuere vehicula, nibh lorem ultrices risus, non tempor eros est viverra erat.
-            <h3>Bla bla bla</h3>
-            Mauris consequat odio convallis felis laoreet faucibus. Nullam tempor ante ac urna pulvinar lobortis.
-            Integer eleifend ultricies volutpat. Vivamus at ultricies leo. Nunc condimentum feugiat tempus. Aliquam
-            risus urna, tincidunt laoreet faucibus ac, ultrices ut elit. Integer ultricies, enim egestas tempus
-            vehicula, odio lectus pulvinar nulla, et rhoncus eros mauris et lacus. Sed scelerisque nisi vel nibh
-            lobortis, bibendum viverra nulla rhoncus. Mauris ultricies facilisis metus vitae sodales. Sed accumsan
-            magna libero, vitae dignissim mi consectetur vel. Maecenas tincidunt neque consequat ante suscipit,
-            congue egestas turpis consequat.
-            <h3>Bla Bla Bla</h3>
-            Etiam vestibulum, odio vitae consequat vehicula, ex nisi maximus erat, et pellentesque dolor magna eu
-            neque. Integer ornare dictum nunc, eu posuere orci molestie vel. Fusce vestibulum sollicitudin
-            porttitor. Nullam non ligula in ante varius tincidunt. Donec id volutpat lorem. Ut eu tincidunt mauris,
-            quis venenatis metus. Integer quam elit, elementum sit amet nisi eget, condimentum dictum nulla. Donec
-            ut metus eros. Ut rutrum ante ut pulvinar tempor. Etiam hendrerit tellus quis sagittis condimentum.
-            Donec ac velit faucibus, egestas purus vel, elementum diam. Curabitur sit amet malesuada erat, at porta
-            turpis. Quisque egestas efficitur pellentesque. Mauris venenatis blandit egestas.
-            </p>
-        </div>
-    </div>
-</body>
-<style>
-    nav {
-        text-align: center;
-        font-family: 'Frijole', cursive;
-        color: black;
-
-    }
-
-    a.nav_bar {
-        border-style: solid;
-        transition-duration: 0.3s;
-        text-decoration: none;
-    }
-
-    a:link,
-    a:visited {
-        color: black;
-        ;
-    }
-
-    a.nav_bar:hover {
-        font-size: 20px;
-        text-decoration: none;
-
-    }
-
-    h1 {
-        text-align: center;
-        font-family: 'Frijole', cursive;
-        font-size: 50px;
-    }
-
-    body {
-        background-color: #0D4401;
-    }
-
-    .poison_bottle:hover {
-        animation: shake 0.82s cubic-bezier(.36, .07, .19, .97) both;
-        transform: translate3d(0, 0, 0);
-        backface-visibility: hidden;
-        perspective: 1000px;
-    }
-
-    @keyframes shake {
-
-        10%,
-        90% {
-            transform: translate3d(-1px, 0, 0);
-        }
-
-        20%,
-        80% {
-            transform: translate3d(2px, 0, 0);
-        }
-
-        30%,
-        50%,
-        70% {
-            transform: translate3d(-4px, 0, 0);
-        }
-
-        40%,
-        60% {
-            transform: translate3d(4px, 0, 0);
-        }
-    }
-
-    .o_mnie {
-        position: relative;
-        margin-top: 50px;
-        width: auto;
-        height: 600px;
-        background-color: #1E5512;
-        text-align: justify;
-        color: black;
-        font-family: sans-serif;
-    }
-    .o_mnie_text{
-        color:white;
-    }
-</style>
+        <footer>
+            <p>Stronę wykonał 	&copy; Hubert Truty e-mail: hubert98truty@gmail.com</p>
+        </footer>
+ </body>
 
 </html>
