--- a/HTML_Crash_Course/index.html
+++ b/HTML_Crash_Course/index.html
@@ -5,10 +5,124 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- Internal Way to add CSS
+    <style>
+        h1 {
+            color: blue;
+        }
+    </style> -->
+    <link rel="stylesheet" type="text/css" href="/HTML_Crash_Course/style_1.css">
 </head>
 
 <body>
+    <div class="container">
+        <div class="box-1">
+            <!-- Horrible Way 
+    <h1 style="color: red;">Hello World</h1>
+    -->
+            <h1>Hello World</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores id esse totam, asperiores, cum aperiam
+                eligendi
+                sed tempora porro vitae nostrum et similique, deserunt distinctio eos eum quibusdam quasi ad!
+            </p>
+        </div>
+        <div class="box-2">
+            <h1>Goodbye World</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore nulla quod tenetur a commodi
+                repellendus cumque, odit veritatis assumenda enim officia iste atque rem, error hic voluptatem nobis
+                autem libero?
 
+            </p>
+        </div>
+        <div class="categories">
+            <h2>Categories</h2>
+            <ul>
+                <li><a href="#">Category 1</a></li>
+                <li><a href="#">Category 2</a></li>
+                <li><a href="#">Category 3</a></li>
+                <li><a href="#">Category 4</a></li>
+            </ul>
+        </div>
+
+        <form class="myForm">
+            <div class="form-group">
+                <label>Name:</label>
+                <input type="text" name="name">
+            </div>
+            <div class="form-group">
+                <label>Email:</label>
+                <input type="text" name="email">
+            </div>
+            <div class="form-group">
+                <label>message: </label>
+                <textarea name="message"></textarea>
+            </div>
+            <input class="button" type="submit" value="submit" name="">
+        </form>
+
+        <div class="block">
+            <h3>Heading</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat molestias architecto soluta, sit veniam
+                fuga, accusamus laborum deleniti nulla maxime culpa minus sed. Vel asperiores consectetur, error
+                praesentium non neque?</p>
+        </div>
+        <div class="block">
+            <h3>Heading</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat molestias architecto soluta, sit veniam
+                fuga, accusamus laborum deleniti nulla maxime culpa minus sed. Vel asperiores consectetur, error
+                praesentium non neque?</p>
+        </div>
+        <div class="block">
+            <h3>Heading</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat molestias architecto soluta, sit veniam
+                fuga, accusamus laborum deleniti nulla maxime culpa minus sed. Vel asperiores consectetur, error
+                praesentium non neque?</p>
+        </div>
+
+        <div class="clr"></div>
+        <div id="main-block">
+            <h3>Heading</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat molestias architecto soluta, sit veniam
+                fuga, accusamus laborum deleniti nulla maxime culpa minus sed. Vel asperiores consectetur, error
+                praesentium non neque?</p>
+        </div>
+        <div id="sideBar">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus, rem? Vero, harum! Corrupti vero
+                quae doloremque officia tenetur, assumenda repudiandae vel maxime adipisci nisi reprehenderit deleniti
+                dignissimos beatae quidem dicta!</p>
+        </div>
+
+        <div class="clr"></div>
+
+        <div class="p-box">
+            <h1>Hello</h1>
+            <h2> Goodbye</h2>
+        </div>
+
+        <ul class="myList">
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+        </ul>
+
+    </div><!-- Container -->
+
+    <a class="fix-me" href="">hello </a>
+
+    <div style="margin-top: 500px;"></div>
 </body>
 
 </html>
